added missing backgroudn

--- a/vol1.css
+++ b/vol1.css
@@ -10,7 +10,7 @@ body, html {
 }
 
 .container {
-  background-image: url('wood-background.jpeg');
+  background-image: url('assets/images/wood-background.jpeg');
   background-size: cover;
   background-position: center;
   height: 100vh;
