--- a/vol1.css
+++ b/vol1.css
@@ -1,7 +1,7 @@
 body, html {
   margin: 0;
   padding: 0;
-  height: 100%;
+  height: 100vh;
 }
 
 @font-face {
@@ -48,7 +48,7 @@ body, html {
   display: flex;
   flex-direction: column;
   position: relative;
-  width: 1000px;
+  width: 50vw;
   margin-bottom: 2rem;
   transform: rotate(-25deg) translateX(3vw) translateY(6vh);
 }
@@ -66,7 +66,7 @@ body, html {
   transform: rotate(-2deg);
   font-family: scribble;
 
-  font-size: 250px;
+  font-size: 5vw;
 }
 
 .vol-1 span{
@@ -77,7 +77,7 @@ body, html {
   transform: rotate(-2deg);
   font-family: scribble;
 
-  font-size: 100px
+  font-size: 3vw;
 }
 
 .vol-1:hover, .date:hover{
@@ -100,13 +100,13 @@ body, html {
 .swamp {
   width: 30vw;
   height: auto;
-  transform: rotate(-7deg) translate(60vw, -35vh);
+  transform: rotate(-7deg) translate(60vw, -20vh);
 }
 
 .postcard {
   width: 30vw;
   height: auto;
-  transform: rotate(-28.62deg) translate(40vw, -15vh);
+  transform: rotate(-28.62deg) translate(40vw, 0vh);
 }
 
 .banana {
