--- a/vol1.css
+++ b/vol1.css
@@ -23,9 +23,17 @@ body, html {
   overflow: hidden;
 }
 
+.buttons {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+
+  margin-top: 2vh;
+  
+}
+
 .back{
   font-family: inherit;
-  padding: 0.5rem 1.5rem;
   font-size: 5rem;
   background-color: rgb(70, 44, 18);
   border: 2px solid #9f672f;
@@ -48,40 +56,44 @@ body, html {
   display: flex;
   flex-direction: column;
   position: relative;
-  width: 50vw;
+  width: 60vw;
+  height: 20vh;
   margin-bottom: 2rem;
-  transform: rotate(-25deg) translateX(3vw) translateY(6vh);
+  transform: rotate(0deg) translateX(3vw) translateY(6vh);
+  margin: 5vw;
 }
 
 .note {
-  width: 100%;
+  width: 0;
   display: block;
 }
 
 .vol-1 {
   position: absolute;
-  top: 15%;
-  left: 20%;
-  width: 70%;
-  transform: rotate(-2deg);
+  top: 100%;
+  left: 10%;
+  width: 100%;
+  transform: rotate(0deg) translateX(-15vw) translateY(-30vh);
   font-family: scribble;
+  color: rgba(237, 170, 94, 0.5);
 
-  font-size: 5vw;
+  font-size: 15vw;
 }
 
 .vol-1 span{
   position: absolute;
-  top: 100%;
-  left: 18%;
+  top: 90%;
+  left: 10%;
   width: 70%;
   transform: rotate(-2deg);
   font-family: scribble;
 
-  font-size: 3vw;
+
+  font-size: 2vw;
 }
 
 .vol-1:hover, .date:hover{
-  color: red;
+  color: rgba(74, 41, 4, 0.5);
 }
 
 .image-grid {
@@ -100,13 +112,13 @@ body, html {
 .swamp {
   width: 30vw;
   height: auto;
-  transform: rotate(-7deg) translate(60vw, -20vh);
+  transform: rotate(-7deg) translate(60vw, -40vh);
 }
 
 .postcard {
   width: 30vw;
   height: auto;
-  transform: rotate(-28.62deg) translate(40vw, 0vh);
+  transform: rotate(-28.62deg) translate(40vw, -30vh);
 }
 
 .banana {
@@ -116,7 +128,7 @@ body, html {
 }
 
 .paper {
-  width: 50vw;
+  width: 60vw;
   height: auto;
   transform: rotate(0deg) translate(-10vw, 30vh);
 }
@@ -124,19 +136,19 @@ body, html {
 .garden {
   width: 35vw;
   height: auto;
-  transform: rotate(-4deg) translate(68vw, 0vh);
+  transform: rotate(-4deg) translate(68vw, -10vh);
 }
 
 .dog {
   width: 35vw;
   height: auto;
-  transform: rotate(0deg) translate(40vw, 10vh);
+  transform: rotate(0deg) translate(40vw, 0vh);
 }
 
 .bubbles {
   width: 35vw;
   height: auto;
-  transform: rotate(0deg) translate(10vw, -40vh);
+  transform: rotate(0deg) translate(10vw, -50vh);
 
   animation: float 10s infinite;
 }
@@ -144,19 +156,19 @@ body, html {
 .chocolate {
   width: 40vw;
   height: auto;
-  transform: rotate(0deg) translate(5vw, 20vh);
+  transform: rotate(0deg) translate(5vw, 10vh);
 }
 
 .ball {
   width: 20vw;
   height: auto;
-  transform: rotate(42.03deg) translate(50vw, -70vh);
+  transform: rotate(42.03deg) translate(70vw, -80vh);
 }
 
 .treats {
   width: 30vw;
   height: auto;
-  transform: rotate(90deg) translate(15vw, -100vh);
+  transform: rotate(90deg) translate(10vw, -90vh);
 }
 
 
@@ -164,25 +176,33 @@ body, html {
   filter: saturate(10);
 }
 
-.scuff {
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
-  width: 100px;
-  opacity: 0.8;
+.scuffs {
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
+  
 }
+
+.scuff-1 {
+  width: 25vw;
+  height: auto;
+  transform: translate(0vw, -50vh); 
+  opacity: 50%;
+  
+}
+
 
 @keyframes float {
   0%{
-      transform: rotate(0deg) translate(10vw, -40vh);
+      transform: rotate(0deg) translate(10vw, -50vh);
   }
 
   50%{
-      transform: rotate(0deg) translate(15vw, -45vh);
+      transform: rotate(0deg) translate(15vw, -55vh);
 
   }
   100%{
-      transform: rotate(0deg) translate(10vw, -40vh);
+      transform: rotate(0deg) translate(10vw, -50vh);
   }
   
 }
