--- a/index-style.css
+++ b/index-style.css
@@ -50,10 +50,41 @@ body, html {
 
 .textbox{
   display:flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   max-height: 80vh;
+}
+
+.header{
+  margin-bottom: 5vh;
+}
+
+.header a{
+  margin-top: 3vh;
+  color: red;
+  font-size: 3vh;
+  text-decoration: none;
+}
+
+.header a:hover{
+  animation: submit-anim 2s infinite;
+  border: solid black;
+  padding: 2vh;
+  border-radius: 1vh;
+
+}
+
+@keyframes submit-anim {
+      0%   { color: red; font-size: 10vh;}
+      14%  { color: orange; font-size: 10vh;}
+      28%  { color: yellow; font-size: 10vh;}
+      42%  { color: green; font-size: 10vh;}
+      57%  { color: blue; font-size: 10vh;}
+      71%  { color: indigo; font-size: 10vh;}
+      85%  { color: violet; font-size: 10vh;}
+      100% { color: red; font-size: 10vh;}
+  
 }
 
 .textbox p{
@@ -104,13 +135,13 @@ body, html {
 
 @keyframes go-button-anim {
   0%{
-    background-color: rgba(92, 70, 48, 0.2);
+    background-color: rgba(197, 105, 65, 0.2);
   }
   70%{
-    background-color: rgba(92, 70, 48, 0.7);
+    background-color: rgba(197, 105, 65, 0.7);
   }
   100%{
-    background-color: rgba(92, 70, 48, 0.2);
+    background-color: rgba(197, 105, 65, 0.2);
   }
 
   
